load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-pure-runtime-java-extension-interpreted-dsl-path",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-interpreted",
    ],
)

java_library(
    name = "test_utils",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":legend-pure-runtime-java-extension-interpreted-dsl-path",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-grammar", 
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-interpreted",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path:pure_platform_dsl_path_par_lib",
        "@maven//:junit_junit",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_test(
    name = "TestDSLExecution",
    test_class = "org.finos.legend.pure.runtime.java.interpreted.path.TestDSLExecution",
    runtime_deps = [":test_utils"],
)
