load("@rules_java//java:defs.bzl", "java_library")
load("//legend-pure:pure_test.bzl", "pure_test")

java_library(
    name = "legend-pure-runtime-java-extension-interpreted-dsl-path",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-interpreted",
    ],
)

pure_test(
    name = "TestDSLExecution",
    srcs = ["src/test/java/org/finos/legend/pure/runtime/java/interpreted/path/TestDSLExecution.java"],
    compiled_test_deps = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-runtime-java-extension-compiled-dsl-path"],
    test_class = "org.finos.legend.pure.runtime.java.interpreted.path.TestDSLExecution",
    deps = [
        ":legend-pure-runtime-java-extension-interpreted-dsl-path",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path:pure_platform_dsl_path_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-interpreted",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
