load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-pure-m2-dsl-store-grammar",
    srcs = [
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/store/RelationStoreAccessor.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/store/processor/RelationStoreAccessorProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/store/unloader/RelationStoreAccessorUnloader.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/store/validation/RelationStoreAccessorValidation.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/store/walker/RelationStoreAccessorWalker.java",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
