load("//tools/build_rules:pure_generation.bzl", "pure_model_generation")

java_library(
    name = "m2-dsl-store-pure-boot",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    runtime_deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        ":m2-dsl-store-pure-boot",
    ],
    visibility = ["//visibility:public"],
)

pure_model_generation(
    name = "pure_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    visibility = ["//visibility:public"],
    model_name = "Store",
    source_path = "/platform_dsl_store/grammar/store.pure,/platform_dsl_store/grammar/runtime.pure",
    tool = ":M3CoreInstanceGenerator",
)

java_library(
    name = "m2-dsl-store-pure-gen",
    srcs = [":pure_gen"],
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "legend-pure-m2-dsl-store-pure",
    visibility = ["//visibility:public"],
    exports = [
        ":m2-dsl-store-pure-boot",
        ":m2-dsl-store-pure-gen",
    ],
)

java_binary(
    name = "PureJarGenerator",
    main_class = "org.finos.legend.pure.m3.generator.par.PureJarGenerator",
    runtime_deps = [
        ":m2-dsl-store-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "pure_platform_dsl_store_par",
    srcs = [
        ":m2-dsl-store-pure-boot",
        # We don't need other PARs as inputs for PureJarGenerator execution, 
        # but Bazel needs to know to build them if they are runtime deps?
        # Actually PureJarGenerator runtime_deps handle the classpath.
    ],
    outs = ["pure-platform_dsl_store.par"],
    cmd = """
        mkdir -p par_out_dsl_store
        $(location :PureJarGenerator) \
            0.0.0-SNAPSHOT \
            platform_dsl_store \
            par_out_dsl_store
        
        mv par_out_dsl_store/pure-platform_dsl_store.par $(location pure-platform_dsl_store.par)
    """,
    tools = [":PureJarGenerator"],
    visibility = ["//visibility:public"],
)

java_library(
    name = "pure_platform_dsl_store_par_lib",
    resources = [":pure-platform_dsl_store.par"],
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
    visibility = ["//visibility:public"],
)
