load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_library.bzl", "java_library")
load("//tools/build_rules:pure_generation.bzl", "pure_model_generation")

java_library(
    name = "m2-dsl-store-pure-boot",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m2-dsl-store-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
)

pure_model_generation(
    name = "pure_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    model_name = "Store",
    source_path = "/platform_dsl_store/grammar/store.pure",
    tool = ":M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
)

java_library(
    name = "m2-dsl-store-pure-gen",
    srcs = [":pure_gen"],
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "legend-pure-m2-dsl-store-pure",
    visibility = ["//visibility:public"],
    exports = [
        ":m2-dsl-store-pure-boot",
        ":m2-dsl-store-pure-gen",
    ],
)

java_binary(
    name = "PureJarGenerator",
    main_class = "org.finos.legend.pure.m3.generator.par.PureJarGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m2-dsl-store-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
)

load("//legend-pure/legend-pure-core/legend-pure-m3-core:pure.bzl", "pure_par")

pure_par(
    name = "pure_platform_dsl_store_par",
    out = "pure-platform_dsl_store.par",
    tool = ":PureJarGenerator",
    repo_name = "platform_dsl_store",
    visibility = ["//visibility:public"],
)

java_library(
    name = "pure_platform_dsl_store_par_lib",
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
    resources = [":pure-platform_dsl_store.par"],
    visibility = ["//visibility:public"],
)
