load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_library.bzl", "java_library")
load("//tools/build_rules:pure_generation.bzl", "pure_model_generation", "pure_par")

java_library(
    name = "m2-dsl-store-pure-boot",
    srcs = [
        "src/main/java/org/finos/legend/pure/code/core/StoreCodeRepositoryProvider.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/store/M2StorePaths.java",
    ],
    resources = glob(["src/main/resources/**/*"], exclude = ["src/main/resources/META-INF/services/org.finos.legend.pure.runtime.java.compiled.extension.CompiledExtension"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m2-dsl-store-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
)

pure_model_generation(
    name = "pure_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    model_name = "Store",
    source_path = "/platform_dsl_store/grammar/store.pure",
    tool = ":M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
)

pure_model_generation(
    name = "runtime_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    model_name = "Runtime",
    source_path = "/platform_dsl_store/grammar/runtime.pure",
    tool = ":M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
)

java_library(
    name = "m2-dsl-store-pure-gen",
    srcs = [":pure_gen", ":runtime_gen"] + glob(["src/main/java/**/*.java"], exclude = ["**/StoreExtensionCompiled.java"]),
    resources = ["src/main/resources/META-INF/services/org.finos.legend.pure.m4.coreinstance.factory.CoreInstanceFactory"],
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "store-compiled-extension",
    srcs = ["src/main/java/org/finos/legend/pure/runtime/java/extension/dsl/store/compiled/StoreExtensionCompiled.java"],
    resources = ["src/main/resources/META-INF/services/org.finos.legend.pure.runtime.java.compiled.extension.CompiledExtension"],
    visibility = ["//visibility:public"],
    deps = [
        ":m2-dsl-store-pure-gen",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "legend-pure-m2-dsl-store-pure",
    visibility = ["//visibility:public"],
    exports = [
        ":m2-dsl-store-pure-boot",
        ":m2-dsl-store-pure-gen",
        ":platform_dsl_store_metadata_lib",
    ],
)

java_library(
    name = "platform_dsl_store_metadata_lib",
    resources = [":platform_dsl_store_metadata"],
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
    visibility = ["//visibility:public"],
)

genrule(
    name = "platform_dsl_store_metadata",
    outs = ["metadata/specs/platform_dsl_store.json"],
    cmd = "mkdir -p $$(dirname $@) && echo '{\"name\": \"platform_dsl_store\", \"dependencies\": [\"platform\"]}' > $@",
    visibility = ["//visibility:public"],
)


pure_par(
    name = "pure_platform_dsl_store_par",
    out = "pure-platform_dsl_store.par",
    repo_name = "platform_dsl_store",
    deps = [
        ":m2-dsl-store-pure-boot",
        ":m2-dsl-store-pure-gen",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "pure_platform_dsl_store_par_lib",
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
    resources = [":pure-platform_dsl_store.par"],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "compiled_metadata_generator",
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaCodeGeneration",
    runtime_deps = [
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        ":legend-pure-m2-dsl-store-pure",
    ],
    visibility = ["//visibility:public"],
)

load("//legend-pure/legend-pure-core/legend-pure-m3-core:pure.bzl", "pure_compiled_metadata_gen")

pure_compiled_metadata_gen(
    name = "platform_dsl_store_compiled_graph",
    srcs = glob(["src/main/resources/**/*"]),
    out = "platform_dsl_store_compiled_metadata.jar",
    module_name = "platform_dsl_store",
    tool = ":compiled_metadata_generator",
    visibility = ["//visibility:public"],
)

java_import(
    name = "platform_dsl_store_compiled_graph_import",
    jars = [":platform_dsl_store_compiled_metadata.jar"],
    visibility = ["//visibility:public"],
)
