load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//legend-pure/legend-pure-core/legend-pure-m3-core:pure.bzl", "pure_generator", "pure_jar_extract", "pure_java_code_gen")
load("//tools/build_rules:java_model_generation.bzl", "java_model_generation")

java_binary(
    name = "JavaModelFactoryGenerator_Store",
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaModelFactoryGenerator",
    visibility = ["//visibility:private"],
    runtime_deps = [
        ":m3-store-gen-lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-grammar",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
    ],
)

java_binary(
    name = "M3CoreInstanceGenerator_Store",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    visibility = ["//visibility:private"],
    runtime_deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
    ],
)

java_model_generation(
    name = "java_gen",
    srcs = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:pure_gen"],
    factory_class = "org.finos.legend.pure.m2.inlinedsl.store.RelationStoreAccessor",
    model_name = "Store",
    tool = ":JavaModelFactoryGenerator_Store",
)

java_binary(
    name = "JavaCodeGeneration_Store",
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaCodeGeneration",
    visibility = ["//visibility:private"],
    runtime_deps = [
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        # PAR needed?
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:pure_platform_dsl_store_par_lib",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
        ":m3-store-gen-lib",
        ":m3-store-extension-lib",
    ],
)

pure_java_code_gen(
    name = "generate_store_sources",
    srcs = [
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:pure_platform_dsl_store_par_lib",
    ],
    repository = "platform_dsl_store",
    tool = ":JavaCodeGeneration_Store",
)

pure_jar_extract(
    name = "extract_store_registry",
    include_patterns = [
        "org/finos/legend/pure/generated/StoreJavaModelFactoryRegistry.java",
        "org/finos/legend/pure/generated/*_CompImpl.java",
    ],
    src_jar = ":java_gen",
)

pure_generator(
    name = "generate_store_m3_instances",
    srcs = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:pure_platform_dsl_store_par_lib"],
    out = "store_m3_instances.srcjar",
    args_list = [
        "M3Store",
        "/platform_dsl_store/grammar/runtime.pure,/platform_dsl_store/grammar/store.pure",
    ],
    tool = ":M3CoreInstanceGenerator_Store",
)

java_library(
    name = "m3-store-gen-lib",
    srcs = [":generate_store_m3_instances"],
    visibility = ["//visibility:private"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "legend-pure-runtime-java-extension-compiled-dsl-store",
    srcs = [
        ":extract_store_registry",
        ":generate_store_m3_instances",
        ":generate_store_sources",
    ] + glob(["src/main/java/**/*.java"]),
    javacopts = [
        "-Xep:IdentityBinaryExpression:OFF",
        "-Xep:IsInstanceIncompatibleType:OFF",
        "-Xep:ComparableType:OFF",
        "-Xep:SelfEquals:OFF",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure:m2-dsl-store-pure-gen",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
        ":m3-store-extension-lib",
    ],
)

java_library(
    name = "m3-store-extension-lib",
    srcs = ["src/main/java/org/finos/legend/pure/runtime/java/extension/dsl/mapping/compiled/M3StoreExtensionCompiled.java"],
    resources = glob(["src/main/resources/m3_store_extension/**/*"]),
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-runtime-java-extension-compiled-dsl-store/src/main/resources/m3_store_extension",
    deps = [
        ":m3-store-gen-lib",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
    visibility = ["//visibility:private"],
)
