load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-pure-m2-dsl-tds-grammar",
    srcs = [
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/tds/TDSExtension.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/tds/processor/TDSProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/tds/unloader/TDSUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/tds/validation/TDSVisibilityValidator.java",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure",
        "@legend_maven//:io_deephaven_deephaven_csv",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
