load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_library.bzl", "java_library")
load("//tools/build_rules:pure_generation.bzl", "pure_model_generation", "pure_par")

java_library(
    name = "m2-dsl-tds-pure-boot",
    srcs = [
        "src/main/java/org/finos/legend/pure/code/core/TDSCodeRepositoryProvider.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/tds/M2TDSPaths.java",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m2-dsl-tds-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
)

pure_model_generation(
    name = "pure_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    model_name = "TDS",
    source_path = "/platform_dsl_tds/tds.pure",
    tool = ":M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
)

java_library(
    name = "m2-dsl-tds-pure-gen",
    srcs = [":pure_gen"],
    visibility = ["//visibility:public"],
    deps = [
        ":m2-dsl-tds-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "legend-pure-m2-dsl-tds-pure",
    visibility = ["//visibility:public"],
    exports = [
        ":m2-dsl-tds-pure-boot",
        ":m2-dsl-tds-pure-gen",
        ":platform_dsl_tds_metadata_lib",
    ],
)

java_library(
    name = "platform_dsl_tds_metadata_lib",
    resources = [":platform_dsl_tds_metadata"],
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure",
    visibility = ["//visibility:public"],
)

genrule(
    name = "platform_dsl_tds_metadata",
    outs = ["metadata/specs/platform_dsl_tds.json"],
    cmd = "mkdir -p $$(dirname $@) && echo '{\"name\": \"platform_dsl_tds\", \"dependencies\": [\"platform\"]}' > $@",
    visibility = ["//visibility:public"],
)


pure_par(
    name = "pure_platform_dsl_tds_par",
    out = "pure-platform_dsl_tds.par",
    repo_name = "platform_dsl_tds",
    deps = [
        ":m2-dsl-tds-pure-boot",
        ":legend-pure-m2-dsl-tds-pure",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "pure_platform_dsl_tds_par_lib",
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-tds/legend-pure-m2-dsl-tds-pure",
    resources = [":pure-platform_dsl_tds.par"],
    visibility = ["//visibility:public"],
)


java_binary(
    name = "compiled_metadata_generator",
    main_class = "org.finos.legend.pure.runtime.java.compiled.generation.orchestrator.JavaCodeGeneration",
    runtime_deps = [
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        ":legend-pure-m2-dsl-tds-pure",
    ],
    visibility = ["//visibility:public"],
)

load("//legend-pure/legend-pure-core/legend-pure-m3-core:pure.bzl", "pure_compiled_metadata_gen")

pure_compiled_metadata_gen(
    name = "platform_dsl_tds_compiled_graph",
    srcs = glob(["src/main/resources/**/*"]),
    out = "platform_dsl_tds_compiled_metadata.jar",
    module_name = "platform_dsl_tds",
    tool = ":compiled_metadata_generator",
    visibility = ["//visibility:public"],
)

java_import(
    name = "platform_dsl_tds_compiled_graph_import",
    jars = [":platform_dsl_tds_compiled_metadata.jar"],
    visibility = ["//visibility:public"],
)
